Group 2 Richard Remley

--- a/style.css
+++ b/style.css
@@ -1,9 +1,23 @@
-h3 {margin: 0 auto;
-word-wrap: break-word;}
+
 body {
     background-image:url(https://n3rdcore.it/wp-content/uploads/2019/04/GOT-8.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
 
+}
+h3 {margin: 0 auto;
+word-wrap: break-word;
+border: 1px solid black;
+padding: 25px 50px 25px 50px;
+background-color: rgba(222,184,135, 0.4);
+font-family: 'Tangerine', cursive;
+font-size: 30px;
+}
+h2 {font-family: 'Charm', cursive;
+    font-size: 55px;
+}
+h1 {font-family: 'Charm', cursive;
+    font-size: 70px;
+    padding: 0px 0px 0px 25px;
 }
