--- a/style.css
+++ b/style.css
@@ -15,9 +15,23 @@ font-family: 'Tangerine', cursive;
 font-size: 30px;
 }
 h2 {font-family: 'Charm', cursive;
-    font-size: 55px;
+    font-size: 55px; 
+     color:#101010;
+    text-shadow: 0px -2px 4px #fff, 0px -2px 10px rgb(247, 247, 242), 0px -10px 20px         rgb(245, 246, 245), 0px -20px 40px rgb(242, 235, 235); 
 }
 h1 {font-family: 'Charm', cursive;
     font-size: 70px;
     padding: 0px 0px 0px 25px;
+    color:#101010;
+    text-shadow: 0px -2px 4px #fff, 0px -2px 10px rgb(247, 247, 242), 0px -10px 20px         rgb(245, 246, 245), 0px -20px 40px rgb(242, 235, 235); 
+}
+
+#ice{ color: #f5f5f5;
+text-shadow: 0px -2px 4px #fff, 0px -2px 10px rgb(51, 218, 255), 0px -10px 20px         rgb(115, 199, 227), 0px -20px 40px #C33;}
+#fire {color: #f5f5f5;
+    text-shadow: 0px -2px 4px #fff, 0px -2px 10px #FF3, 0px -10px 20px         #F90, 0px -20px 40px #C33; }
+
+h4 {
+    color:#101010;
+    text-shadow: 0px -2px 4px #fff, 0px -2px 10px rgb(247, 247, 242), 0px -10px 20px         rgb(245, 246, 245), 0px -20px 40px rgb(241, 233, 233); 
 }
