--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h1 {font-family: 'Charm', cursive;
 text-shadow: 0px -2px 4px #fff, 0px -2px 10px rgb(51, 218, 255), 0px -10px 20px         rgb(115, 199, 227), 0px -20px 40px #C33;}
 #fire {color: #f5f5f5;
     text-shadow: 0px -2px 4px #fff, 0px -2px 10px #FF3, 0px -10px 20px         #F90, 0px -20px 40px #C33; }
-
+/* I used an example from  https://cssdeck.com/blog/create-a-burning-text-effect-with-css3/ on how to create a fire effect in CSS, I then modified this for an ice effect and for generally styling my text.*/
 h4 {
     color:#101010;
     text-shadow: 0px -2px 4px #fff, 0px -2px 10px rgb(247, 247, 242), 0px -10px 20px         rgb(245, 246, 245), 0px -20px 40px rgb(241, 233, 233); 
